--- a/AlgorithmBattleArenaFrontend/package.json
+++ b/AlgorithmBattleArenaFrontend/package.json
@@ -17,25 +17,27 @@
     "dayjs": "^1.11.9",
     "jwt-decode": "^3.1.2",
     "lucide-react": "^0.544.0",
+    "monaco-editor": "^0.53.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.1"
+    "react-router-dom": "^6.14.1",
+    "vite-node": "^3.2.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
     "@testing-library/react": "14.0.0",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
-    "@vitejs/plugin-react": "^4.3.1",
+    "@vitejs/plugin-react": "^5.0.4",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
-    "msw": "1.2.1",
+    "msw": "^2.11.4",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.0",
-    "vite": "^4.5.3",
-    "vitest": "1.5.1"
+    "vite": "^7.1.9",
+    "vitest": "^3.2.4"
   }
 }
